refactor: mapper 적용층을 컨트롤러에서 서비스 계층으로 변경